@@ -85,11 +85,6 @@ namespace kt
 		/// Get the current torrent
 		bt::TorrentInterface* getCurrentTorrent();
 		
-		/**
-		 * Setup the default columns of the view depending on the group it is showing.
-		 */
-		void setupDefaultColumns();
-		
 		/// Get the number of torrents
 		bt::Uint32 numTorrents() const {return num_torrents;};
 		
@@ -104,12 +99,15 @@ namespace kt
 		
 		/// Extend a widget
 		void extend(bt::TorrentInterface* tc,Extender* widget);
+	
 		
 	public slots:
-		/**
-		 * Update all items in the view
-		 * */
+		/// Set the filter string
+		void setFilterString(const QString & filter);
+		
+		/// Update all items in the view
 		void update();
+		
 		void startTorrents();
 		void forceStartTorrents();
 		void stopTorrents();
