@@ -58,6 +58,12 @@ namespace kt
 		 */
 		bool update(ViewDelegate* delegate,bool force_resort = false);
 		
+		/**
+		 * Set the current filter string
+		 * @param filter The filter string
+		 */
+		void setFilterString(const QString & filter);
+		
 		/// Is a column a default column for an upload view
 		bool defaultColumnForUpload(int column);
 		
@@ -127,7 +133,7 @@ namespace kt
 		{
 			foreach (Item* item,torrents)
 			{
-				if (item->member(group))
+				if (item->visible(group, filter_string))
 					if (!a(item->tc))
 						break;
 			}
@@ -194,7 +200,7 @@ namespace kt
 			QVariant data(int col) const;
 			QVariant color(int col) const;
 			bool lessThan(int col,const Item* other) const;
-			bool member(Group* group) const;
+			bool visible(Group* group, const QString & filter_string) const;
 		};
 			
 	private:
@@ -206,6 +212,7 @@ namespace kt
 		Group* group;
 		int num_visible;
 		QModelIndexList update_list;
+		QString filter_string;
 	};
 
 }
